--- a/client/src/app/general/general.component.html
+++ b/client/src/app/general/general.component.html
@@ -1,8 +1,8 @@
-<div #general class="group-container metallic-button master-volume-height">
+<div #general class="group-container metallic-button general-height">
   <h1>General</h1>
   <div class="group">
     <div class="column">
-      <div class="module master-volume-width">
+      <div class="module general-width">
         <app-level-control #masterVolume label="Master Level" [style]="dialStyle.magenta" [divisions]="10"
                            [calAngle]="300"
                            [radius]="50" (setLevel)="setLevel($event)" [factor]="1">
@@ -10,7 +10,7 @@
       </div>
       <div class="button-container module">
         <h2>Configuration</h2>
-        <div class="master-volume-width">
+        <div class="general-width">
           @if (showConfigEditor) {
             <div #configEditor
                  [animate.enter]="animationEnter()"
