* Chord portamento mode set up on oscillators and filters. Still need to send velocity through to chordProcessorKeyDownCallback on both.

--- a/client/src/app/filter/filter-component.html
+++ b/client/src/app/filter/filter-component.html
@@ -41,6 +41,7 @@
                                [factor]="1.5"
                                (setLevel)="setPortamento($event)"></app-level-control>
             <select #portamentoType>
+              <option value="chord">Chord</option>
               <option value="last">Last</option>
               <option value="first">First</option>
               <option value="lowest">Lowest</option>
