--- a/client/src/app/oscillator/oscillator.component.scss
+++ b/client/src/app/oscillator/oscillator.component.scss
@@ -8,7 +8,7 @@ div.row {
   justify-content: center;
 }
 div.osc-width {
-  min-width: 280px;
+  width: 280px;
 }
 .enter-animation {
   opacity: 0;
