* Sort config files alphabetically in the selector. * Show config file name on the General Component. * Now possible to update existing configurations

--- a/client/src/app/analyser/analyser-component.html
+++ b/client/src/app/analyser/analyser-component.html
@@ -1,4 +1,4 @@
-<div class="group-container metallic-button">
+<div class="group-container metallic-button analyser-size">
   <h1>Analyser</h1>
   <div class="group">
     <div class="column">
