--- a/client/src/app/reverb-component/reverb-component.html
+++ b/client/src/app/reverb-component/reverb-component.html
@@ -1,4 +1,4 @@
-<div class="group-container reverb-width metallic-button">
+<div class="group-container reverb-size metallic-button">
   <h1>Reverb</h1>
   <div class="group">
     <div class="column">
