--- a/client/src/app/general/general.component.html
+++ b/client/src/app/general/general.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="button-container module">
         <h2>Configuration</h2>
-        <h4>{{proxySettings?.configFileName}}</h4>
+        <h4>{{proxySettings ? proxySettings.configFileName : ""}}</h4>
         <div class="general-width">
           @if (showConfigEditor) {
             <div #configEditor
@@ -28,17 +28,9 @@
                     </div>
                     <div>
                       <button (click)="cancel()">Cancel</button>
-                      <button (click)="confirmAddConfig()" [disabled]="!configFileNameRegex.test(configFileName)">Confirm</button>
+                      <button (click)="addConfiguration(configFileName)" [disabled]="!configFileNameRegex.test(configFileName)">Confirm</button>
                     </div>
                   </form>
-                } @else if (_confirmAddConfig) {
-                  <h4>
-                    Save configuration as {{ configFileName }}, Are you sure?
-                  </h4>
-                  <div>
-                    <button (click)="cancel()">Cancel</button>
-                    <button (click)="addConfiguration(configFileName)">Confirm</button>
-                  </div>
                 } @else if(_confirmOverwrite) {
                   <h4>
                     Update {{ configFileName }} configuration, Are you sure?
