--- a/client/src/app/oscillator/oscillator.component.html
+++ b/client/src/app/oscillator/oscillator.component.html
@@ -47,7 +47,7 @@
       <div class="module osc-width">
         <h2>Modulation</h2>
         <app-level-control #modFreq
-                           label="LFO Frequency"
+                           label="Mod Freq"
                            [style]="dialStyle.green"
                            [divisions]="10"
                            [factor]="2"
