--- a/client/src/app/ring-modulator/ring-modulator-component.html
+++ b/client/src/app/ring-modulator/ring-modulator-component.html
@@ -1,4 +1,4 @@
-<div class="group-container metallic-button reverb-height">
+<div class="group-container metallic-button ring-mod-size">
   <h1>Ring Modulator</h1>
   <div class="group">
     <div class="column">
